No going with TOML format anymore for TaskLists : it could work but it is painfull to write for the final user so far

--- a/taskparser/Cargo.toml
+++ b/taskparser/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 taskexec = { path = "../taskexec"}
 config = "0.14.0"
+serde = "1.0.197"
 serde_yaml = "0.9.32"
 serde_json = "1.0.114"
