--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,8 @@
-image: rust:slim-buster
-
-cache:
-  paths:
-   - rust
-
 stages:
   - build
-  - tests
-  - deploy
+
+rust-latest:
+  stage: build
+  image: rust:slim-buster
+  script:
+   - cargo build --release --verbose
