Adapt the code to the existance of HostParser lib

--- a/all-in-one-worker/Cargo.toml
+++ b/all-in-one-worker/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 taskexec = { path = "../taskexec" }
 taskparser = { path = "../taskparser" }
 cliparser = { path = "../cliparser" }
+hostparser = { path = "../hostparser" }
