--- a/connection/Cargo.toml
+++ b/connection/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-taskexec = { path = "../taskexec" }
+errors = { path = "../errors" }
 serde = { version = "1.0.197", features = ["derive"] }
 ssh2 = "0.9.4"
