--- a/taskexec/Cargo.toml
+++ b/taskexec/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+connection = { path = "../connection" }
+errors = { path = "../errors" }
 machineid-rs = "1.2.4"
 serde = "1.0.197"
 sha2 = "0.10.8"
