Creating RemoteHostHandler to handle ssh connection, moving this part to the module (for now, will be turned into functions), and having the host value from Assignment passed to the modules through the workflow

--- a/all-in-one-worker/Cargo.toml
+++ b/all-in-one-worker/Cargo.toml
@@ -10,3 +10,5 @@ taskexec = { path = "../taskexec" }
 taskparser = { path = "../taskparser" }
 cliparser = { path = "../cliparser" }
 hostparser = { path = "../hostparser" }
+connection = { path = "../connection" }
+ssh2 = "0.9.4"
