--- a/lib/taskparser/Cargo.toml
+++ b/lib/taskparser/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 taskexec = { path = "../taskexec"}
+errors = { path = "../errors"}
 config = "0.14.0"
 serde = "1.0.197"
 serde_yaml = "0.9.32"
