Fields named changed for improved readability, whole logic rethinked, now Assignment is the core object which contains all data (TaskList, ChangeList and TaskListResult)

--- a/examples/tasklists/tasklist.yaml
+++ b/examples/tasklists/tasklist.yaml
@@ -1,10 +1,10 @@
 - name : 1. System update
-  tasks:
+  steps:
     - !apt
       upgrade: true # Upgrade the whole system
 
 - name : 2. Prerequisites installation
-  tasks:
+  steps:
     - !apt
       state: present # present | absent
       package: build-essential
@@ -14,7 +14,7 @@
       package: git
 
 - name : 3. Core business tool installation
-  tasks:
+  steps:
     - !apt
       state: present
       package: the-engine
