Introducing parallelism : a worker can handle multiple remote hosts with multi-threading (Clone trait needed for Assignment)

--- a/all-in-one-worker/Cargo.toml
+++ b/all-in-one-worker/Cargo.toml
@@ -12,3 +12,4 @@ cli = { path = "../lib/cli" }
 hostparser = { path = "../lib/hostparser" }
 connection = { path = "../lib/connection" }
 ssh2 = "0.9.4"
+rayon = "1.10.0"
