--- a/lib/cli/Cargo.toml
+++ b/lib/cli/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
 taskexec = { path = "../taskexec"}
+termimad = "0.29.1"
