--- a/building/deb/duxtool/DEBIAN/control
+++ b/building/deb/duxtool/DEBIAN/control
@@ -5,5 +5,5 @@ Priority: optional
 Architecture: all
 Depends: openssh-client
 Maintainer: romzorus <romzorus591@gmail.com>
-Description: A scalable and cloud-friendly automation / orchestration tool (all-in-one version)
+Description: A scalable and cloud-friendly automation / orchestration tool (all-in-one version) written in Rust.
 Homepage: https://gitlab.com/dux-tool/dux
