--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ workflow:
     - if: $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "dev"
 
 variables:
-  DUX_VERSION: "0.0.3"
+  DUX_VERSION: "0.0.4"
 
 stages:
   - build
@@ -32,15 +32,15 @@ build-for-fedora:
    - mkdir ~/rpmbuild/BUILDROOT/duxtool-$DUX_VERSION-0.x86_64/
    - cp target/release/all-in-one-worker ~/rpmbuild/BUILD/duxtool
    - rpmbuild -bb ~/rpmbuild/SPECS/dux.spec
-   - cp ~/rpmbuild/RPMS/x86_64/*rpm .
+   - cp ~/rpmbuild/RPMS/x86_64/duxtool-$DUX_VERSION-0.x86_64.rpm duxtool-$DUX_VERSION.rpm
   artifacts:
     paths:
-    - "*.rpm"
+    - duxtool-$DUX_VERSION.rpm
 
 upload-to-package-registry:
   stage: deploy
   script:
     - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file building/deb/duxtool-$DUX_VERSION.deb "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/duxtool/$DUX_VERSION/duxtool-$DUX_VERSION.deb"'
-    - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file duxtool-$DUX_VERSION-0.x86_64.rpm "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/duxtool/$DUX_VERSION/duxtool-$DUX_VERSION-0.x86_64.rpm"'
+    - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file duxtool-$DUX_VERSION.rpm "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/duxtool/$DUX_VERSION/duxtool-$DUX_VERSION.rpm"'
   rules:
    - if: $CI_COMMIT_BRANCH == "main"
