--- a/examples/tasklists/Prerequisites.yaml
+++ b/examples/tasklists/Prerequisites.yaml
@@ -4,9 +4,17 @@
     - name: 1. Test SSH connectiviy
       ping:
 
-    - name: 2. Install git for Debian
+    - name: 2. Upgrade the whole system
+      with_sudo: true
+      apt:
+        upgrade: true
+
+    - name: 3. Install git
       with_sudo: true
       apt:
         state: present
         package: git
-        upgrade: true
+
+    - name: 4. Clone a repository
+      cmd:
+       content: git clone https://gitlab.com/dux-tool/dux.git
