--- a/lib/cli/Cargo.toml
+++ b/lib/cli/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
+colored = "2.1.0"
 taskexec = { path = "../taskexec"}
 termimad = "0.29.1"
