--- a/examples/tasklists/Prerequisites.yaml
+++ b/examples/tasklists/Prerequisites.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Prerequisites
   steps:
-    - name: 1. Test SSH connectiviy
+    - name: 1. Test SSH connectivity
       ping:
 
     - name: 2. Upgrade the whole system
