--- a/scalable-version/worker/Cargo.toml
+++ b/scalable-version/worker/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+taskexec = { path = "../../lib/taskexec" }
+cli = { path = "../../lib/cli" }
+connection = { path = "../../lib/connection" }
+rayon = "1.10.0"
