--- a/lib/taskexec/Cargo.toml
+++ b/lib/taskexec/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2021"
 connection = { path = "../connection" }
 errors = { path = "../errors" }
 machineid-rs = "1.2.4"
-serde = "1.0.197"
+serde = {version = "1.0.188", features= ["derive"]}
 sha2 = "0.10.8"
