--- a/scalable-version/controller/Cargo.toml
+++ b/scalable-version/controller/Cargo.toml
@@ -11,3 +11,8 @@ taskparser = { path = "../../lib/taskparser" }
 cli = { path = "../../lib/cli" }
 hostparser = { path = "../../lib/hostparser" }
 connection = { path = "../../lib/connection" }
+amqprs = "1.5.1"
+tokio = { version = "1.34.0", features = ["full"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+serde = {version = "1.0.188", features= ["derive"]}
+serde_json = "1.0.107"
