--- a/scalable-version/worker/Cargo.toml
+++ b/scalable-version/worker/Cargo.toml
@@ -10,3 +10,8 @@ taskexec = { path = "../../lib/taskexec" }
 cli = { path = "../../lib/cli" }
 connection = { path = "../../lib/connection" }
 rayon = "1.10.0"
+amqprs = "1.5.1"
+tokio = { version = "1.34.0", features = ["full"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+serde = {version = "1.0.188", features= ["derive"]}
+serde_json = "1.0.107"
