--- a/scalable-version/controller/Cargo.toml
+++ b/scalable-version/controller/Cargo.toml
@@ -16,3 +16,5 @@ tokio = { version = "1.34.0", features = ["full"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 serde = {version = "1.0.188", features= ["derive"]}
 serde_json = "1.0.107"
+env_logger = "0.11.3"
+log = "0.4.21"
