--- a/lib/taskparser/Cargo.toml
+++ b/lib/taskparser/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hostparser = { path = "../hostparser"}
 taskexec = { path = "../taskexec"}
 errors = { path = "../errors"}
 config = "0.14.0"
-serde = "1.0.197"
+serde = {version = "1.0.188", features= ["derive"]}
 serde_yaml = "0.9.32"
 serde_json = "1.0.114"
+tera = "1.20.0"
