--- a/all-in-one-worker/Cargo.toml
+++ b/all-in-one-worker/Cargo.toml
@@ -6,10 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-taskexec = { path = "../lib/taskexec" }
-taskparser = { path = "../lib/taskparser" }
-cli = { path = "../lib/cli" }
-hostparser = { path = "../lib/hostparser" }
-connection = { path = "../lib/connection" }
-# confparser = { path = "../lib/confparser" }
 rayon = "1.10.0"
+duxcore = { path = "../../duxcore"}
