--- a/scalable-version/controller/Cargo.toml
+++ b/scalable-version/controller/Cargo.toml
@@ -6,12 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-taskexec = { path = "../../lib/taskexec" }
-taskparser = { path = "../../lib/taskparser" }
-cli = { path = "../../lib/cli" }
-confparser = { path = "../../lib/confparser" }
-hostparser = { path = "../../lib/hostparser" }
-connection = { path = "../../lib/connection" }
+duxcore = { path = "../../../duxcore"}
 amqprs = "1.5.1"
 tokio = { version = "1.34.0", features = ["full"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
