--- a/scalable-version/worker/Cargo.toml
+++ b/scalable-version/worker/Cargo.toml
@@ -6,10 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-taskexec = { path = "../../lib/taskexec" }
-cli = { path = "../../lib/cli" }
-confparser = { path = "../../lib/confparser" }
-connection = { path = "../../lib/connection" }
+duxcore = { path = "../../../duxcore"}
 rayon = "1.10.0"
 amqprs = "1.5.1"
 tokio = { version = "1.34.0", features = ["full"] }
