--- a/scalable-version/controller/Cargo.toml
+++ b/scalable-version/controller/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-duxcore = { path = "../../../duxcore"}
 amqprs = "1.5.1"
 tokio = { version = "1.34.0", features = ["full"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
@@ -14,3 +13,4 @@ serde = {version = "1.0.188", features= ["derive"]}
 serde_json = "1.0.107"
 env_logger = "0.11.3"
 log = "0.4.21"
+duxcore = "0.1.0"
