--- a/scalable-version/worker/Cargo.toml
+++ b/scalable-version/worker/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-duxcore = { path = "../../../duxcore"}
 rayon = "1.10.0"
 amqprs = "1.5.1"
 tokio = { version = "1.34.0", features = ["full"] }
@@ -16,3 +15,4 @@ serde_json = "1.0.107"
 # log = "0.4.21"
 env_logger = "0.11.3"
 log = "0.4.21"
+duxcore = "0.1.0"
