--- a/scalable-worker/Cargo.toml
+++ b/scalable-worker/Cargo.toml
@@ -15,4 +15,5 @@ serde_json = "1.0.107"
 # log = "0.4.21"
 env_logger = "0.11.3"
 log = "0.4.21"
-duxcore = "0.1.0"
+# duxcore = "0.1.0"
+duxcore = { path = "../../duxcore"}
