--- a/scalable-controller/Cargo.toml
+++ b/scalable-controller/Cargo.toml
@@ -13,5 +13,4 @@ serde = {version = "1.0.188", features= ["derive"]}
 serde_json = "1.0.107"
 env_logger = "0.11.3"
 log = "0.4.21"
-# duxcore = "0.1.0"
-duxcore = { path = "../../duxcore"}
+duxcore = { git = "https://gitlab.com/dux-tool/duxcore.git", branch = "main"}
