--- a/scalable-worker/Cargo.toml
+++ b/scalable-worker/Cargo.toml
@@ -15,5 +15,4 @@ serde_json = "1.0.107"
 # log = "0.4.21"
 env_logger = "0.11.3"
 log = "0.4.21"
-# duxcore = "0.1.0"
-duxcore = { path = "../../duxcore"}
+duxcore = { git = "https://gitlab.com/dux-tool/duxcore.git", branch = "main"}
