--- a/building/deb/duxtool/DEBIAN/control
+++ b/building/deb/duxtool/DEBIAN/control
@@ -1,9 +1,9 @@
-Package: duxtool
+Package: dux
 Version: PLACEHOLDER_FOR_VERSION
 Section: base
 Priority: optional
 Architecture: all
 Depends: openssh-client
 Maintainer: romzorus <romzorus591@gmail.com>
-Description: A scalable and cloud-friendly automation / orchestration tool (all-in-one version) written in Rust.
+Description: A basic automation tool (configuration management/orchestration) written in Rust.
 Homepage: https://gitlab.com/dux-tool/dux
