--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
-[workspace]
-members = [
-	"standard",
-	"scalable-controller",
-	"scalable-worker",
-	"agent"]
+[package]
+name = "standard"
+version = "0.1.0"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+duxcore = { git = "https://gitlab.com/dux-tool/duxcore.git", branch = "main"}
+rayon = "1.10.0"
