--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-duxcore = { git = "https://gitlab.com/dux-tool/duxcore.git", branch = "main"}
+duxcore = "0.1.1"
 rayon = "1.10.0"
+config = "0.14.0"
+clap = { version = "4.5.3", features = ["derive"] }
+serde = {version = "1.0.188", features= ["derive"]}
